pkg/plugins/policies/meshretry/plugin/testdata/grpc_retry_listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 10002
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      routeConfig:
        name: outbound:backend
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/service=web&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: backend
          retryPolicy:
            numRetries: 11
            perTryTimeout: 12s
            retryBackOff:
              baseInterval: 13s
              maxInterval: 14s
            retryOn: canceled,deadline-exceeded,internal,resource-exhausted,unavailable
          routes:
          - match:
              prefix: /
            route:
              cluster: backend
              timeout: 0s
      statPrefix: outbound_127_0_0_1_10002
name: outbound:127.0.0.1:10002
trafficDirection: OUTBOUND
