pkg/plugins/policies/meshretry/plugin/testdata/http_retry_listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 10001
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      routeConfig:
        name: outbound:backend
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/service=web&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: backend
          retryPolicy:
            numRetries: 1
            perTryTimeout: 2s
            retriableHeaders:
            - name: x-retry-regex
              stringMatch:
                safeRegex:
                  googleRe2: {}
                  regex: .*
            - name: x-retry-exact
              stringMatch:
                exact: exact-value
            retriableRequestHeaders:
            - name: :method
              stringMatch:
                exact: CONNECT
            - name: :method
              stringMatch:
                exact: DELETE
            - name: :method
              stringMatch:
                exact: GET
            - name: :method
              stringMatch:
                exact: HEAD
            - name: :method
              stringMatch:
                exact: OPTIONS
            - name: :method
              stringMatch:
                exact: PATCH
            - name: :method
              stringMatch:
                exact: POST
            - name: :method
              stringMatch:
                exact: PUT
            - name: :method
              stringMatch:
                exact: TRACE
            - name: x-retry-prefix
              stringMatch:
                prefix: prefix-
            retriableStatusCodes:
            - 429
            retryBackOff:
              baseInterval: 3s
              maxInterval: 4s
            retryOn: 5xx,gateway-error,reset,retriable-4xx,connect-failure,envoy-ratelimited,refused-stream,http3-post-connect-failure,retriable-status-codes
          routes:
          - match:
              prefix: /
            route:
              cluster: backend
              timeout: 0s
      statPrefix: outbound_127_0_0_1_10001
name: outbound:127.0.0.1:10001
trafficDirection: OUTBOUND
